# ChangeLog for sys-apps/policycoreutils
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.82 2011/05/28 05:27:06 blueness Exp $

  28 May 2011; Anthony G. Basile <blueness@gentoo.org>
  policycoreutils-2.0.82.ebuild:
  Stable amd64 x86

  16 Apr 2011; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Updated metadata info.

  08 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  policycoreutils-2.0.82.ebuild:
  Set SUPPORT_PYTHON_ABIS (bug #353762). Fix dependencies. Fix installation
  with FEATURES="multilib-strict".

*policycoreutils-2.0.82 (05 Feb 2011)

  05 Feb 2011; Anthony G. Basile <blueness@gentoo.org>
  +policycoreutils-2.0.82.ebuild:
  New upstream release.

*policycoreutils-2.0.69-r2 (05 Feb 2011)

  05 Feb 2011; Anthony G. Basile <blueness@gentoo.org>
  +policycoreutils-2.0.69-r2.ebuild,
  +files/policycoreutils-2.0.69-setfiles.diff:
  Fixed bug #300613

  04 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  policycoreutils-2.0.55.ebuild, policycoreutils-2.0.69.ebuild,
  policycoreutils-2.0.69-r1.ebuild:
  Delete calls to deprecated python_version().

*policycoreutils-2.0.69-r1 (20 Sep 2009)

  20 Sep 2009; Chris PeBenito <pebenito@gentoo.org>
  +policycoreutils-2.0.69-r1.ebuild:
  Update rlpkg for ext4 and btrfs.

  14 Sep 2009; Chris PeBenito <pebenito@gentoo.org>
  policycoreutils-2.0.69.ebuild:
  Fix libsemanage DEP.

  02 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
  policycoreutils-2.0.55.ebuild, policycoreutils-2.0.69.ebuild:
  Add python_need_rebuild.

*policycoreutils-2.0.69 (02 Aug 2009)

  02 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
  +policycoreutils-2.0.69.ebuild:
  New upstream release.

  18 Jul 2009; Chris PeBenito <pebenito@gentoo.org>
  -policycoreutils-1.34.15.ebuild, policycoreutils-2.0.55.ebuild:
  Mark stable. Remove old ebuilds.

*policycoreutils-2.0.55 (03 Oct 2008)
